--- a/index.html
+++ b/index.html
@@ -1,81 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style type="text/css">
-
-@font-face {
-	font-family: "Miso";
-	src: local("/font/miso.otf")
-}
-
-body {
-		font-family: "Miso", serif; 
-		width: 100%; 
-		height: 100%;
-		background-color: #202020;
-} 
-
-table, th, td {
-	border:1px solid black;
-	border-collapse:collapse;
-}
-
-table {
-    position:absolute; 
-	left: 32%;
-    top: 20%;
-}
-
-table th{
-	height: 60px;
-	width: 325px;
-	color: #ffffff;
-	background-color: #d80546;
-	border: 5px solid #595959;
-	padding: 3px;
-	vertical-align: middle;
-	text-align: center;
-	font-size: 40px;
-}
-
-table td {
-	height: 60px;
-	background-color: #ffffff;
-	border: 5px solid #595959;
-	padding: 5px;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	padding-left: 15px;
-	padding-right: 15px;
-	vertical-align: middle;
-	font-size: 40px;
-}
-
-
-</style>
-</head>
-<body>
-		<table>
-			<tr>
-				<th>INPUT TYPE</th>
-				<th>INPUT FIELD</th>
-			</tr>
-			<tr>
-				<td>Text Type</td>
-				<td><input type="text" style='font-size:40px; height:50px; width:330px'></td>
-			</tr>
-			<tr>
-				<td>Number Type</td>
-				<td><input type="number" style='font-size:40px; height:50px; width:330px'></td>
-			</tr>
-			<tr>
-				<td>Email Type</td>
-				<td><input type="email" style='font-size:40px; height:50px; width:330px'></td>
-			</tr>
-			<tr>
-				<td>URL Type</td>
-				<td><input type="url" style='font-size:40px; height:50px; width:330px'></td>
-			</tr>			
-		</table>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Sample App for webOS TV Virtual Keyboard</title>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <th>INPUT TYPE</th>
+        <th>INPUT FIELD</th>
+      </tr>
+      <tr>
+        <td>Text Type</td>
+        <td><input type="text" /></td>
+      </tr>
+      <tr>
+        <td>Number Type</td>
+        <td><input type="number" /></td>
+      </tr>
+      <tr>
+        <td>Email Type</td>
+        <td><input type="email" /></td>
+      </tr>
+      <tr>
+        <td>URL Type</td>
+        <td><input type="url" /></td>
+      </tr>
+    </table>
+  </body>
 </html>
